--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "content_scripts": [
     {
       "matches": ["https://*/*", "file:///*"],
-      "js": ["content-script.js"],
+      "js": ["build/content-script.js"],
       "all_frames": true
     }
   ],
@@ -15,9 +15,9 @@
     "default_popup": "popup/index.html"
   },
   "icons": {
-    "16": "/images/key16.png",
-    "32": "/images/key32.png",
-    "48": "/images/key48.png",
-    "128": "/images/key128.png"
+    "16": "/icons/key/key16.png",
+    "32": "/icons/key/key32.png",
+    "48": "/icons/key/key48.png",
+    "128": "/icons/key/key128.png"
   }
 }
