--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A password manager chrome extension",
   "main": "manifest.json",
   "scripts": {
-    "start": "webpack --watch"
+    "start": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
