--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,13 @@
   "action": {
     "default_popup": "popup/index.html"
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*/*"],
+      "js": ["build/content.js"],
+      "all_frames": true
+    }
+  ],
   "icons": {
     "16": "/icons/key/key16.png",
     "32": "/icons/key/key32.png",
