--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "styled-components": "^5.3.1",
+    "uuid": "^8.3.2",
     "webpack": "^5.58.1"
   },
   "devDependencies": {
